--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         <div class="container">
                             <div
                                 class="text"
-                                data-phrases="Hello!,I willn be your guide,for everything,you might want to
+                                data-phrases="Hello!,I will be your guide,for everything,you might want to
                             know,what the website,is about,and how,it works."
                             ></div>
                             <div
