--- a/index.html
+++ b/index.html
@@ -22,22 +22,16 @@
                                 class="text"
                                 data-phrases="Hello!,I will be your guide,for everything,you might want to
                             know,what the website,is about,and how,it works."
-                            >
-                                Hover me!
-                            </div>
+                            ></div>
                             <div
                                 class="text"
                                 data-phrases="Here,you'll have space,for you,and your stuff."
-                            >
-                                Hover me!
-                            </div>
+                            ></div>
                             <div
                                 class="text"
                                 data-phrases="You can customize,everything,after your liking!,Just click on the symbol,
                                 in the right corner."
-                            >
-                                Hover me!
-                            </div>
+                            ></div>
                         </div>
                     </section>
 
